--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -36,5 +36,11 @@
     </div>
 
 </div>
+<script src="../static/tests/jquery-3.1.1.min.js"></script>
+<script src="../static/tests/list.js"></script>
+
+<script>
+    initialize();
+</script>
 </body>
 </html>
