--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -11,6 +11,18 @@
 <body>
 <div class="container">
 
+    <div class="navbar">
+        {% if user.is_authenticated %}
+            <p> Logged in as {{ user.email }}</p>
+            <p><a id="id_logout" href="{% url 'logout' %}">Log out</a></p>
+        {% else %}
+            <form method="POST" action="{% url 'send_login_email' %}">
+            Enter email to log in: <input name="email" type="text">
+            {% csrf_token %}
+            </form>
+        {% endif %}
+    </div>
+
     <div class="row">
         <div class="col-md-6 col-md-offset-3 jumbotron">
         	<div class="text-center">
@@ -40,7 +52,9 @@
 <script src="../static/tests/list.js"></script>
 
 <script>
-    initialize();
+$(document).ready(function () {
+    window.Superlists.initialize();
+});
 </script>
 </body>
 </html>
